# AoC

./: LICENSE.md  README.md
.github/workflows/: rust.yml
2023/: Cargo.toml
2023/day-01/: Cargo.toml
2023/day-01/benches/: day01_benchmarks.rs
2023/day-01/src/: lib.rs
2023/day-02/: Cargo.toml
2023/day-02/benches/: day02_benchmarks.rs
2023/day-02/src/: lib.rs
2023/day-03/: Cargo.toml
2023/day-03/benches/: day03_benchmarks.rs
2023/day-03/src/: lib.rs
2023/day-04/: Cargo.toml
2023/day-04/benches/: day04_benchmarks.rs
2023/day-04/src/: lib.rs
2023/day-05/: Cargo.toml
2023/day-05/benches/: day05_benchmarks.rs
2023/day-05/src/: lib.rs
2023/day-06/: Cargo.toml
2023/day-06/benches/: day06_benchmarks.rs
2023/day-06/src/: lib.rs
2023/day-07/: Cargo.toml
2023/day-07/benches/: day07_benchmarks.rs
2023/day-07/src/: lib.rs
2023/day-08/: Cargo.toml
2023/day-08/benches/: day08_benchmarks.rs
2023/day-08/src/: lib.rs
2023/day-09/: Cargo.toml
2023/day-09/benches/: day09_benchmarks.rs
2023/day-09/src/: lib.rs
2023/day-10/: Cargo.toml
2023/day-10/benches/: day10_benchmarks.rs
2023/day-11/: Cargo.toml
2023/day-12/: Cargo.toml
2023/day-13/: Cargo.toml
2023/day-14/: Cargo.toml
2023/day-15/: Cargo.toml
2023/day-16/: Cargo.toml
2023/day-17/: Cargo.toml
2023/day-18/: Cargo.toml
2023/day-19/: Cargo.toml
2024/: Cargo.toml
2024/day-01/: Cargo.toml
2024/day-02/: Cargo.toml
2024/day-03/: Cargo.toml
2024/day-04/: Cargo.toml
2024/day-05/: Cargo.toml
2024/day-06/: Cargo.toml
2024/day-07/: Cargo.toml
(+33 files in other folders)
