[package]
name = "day_08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.45"
regex = "1.10.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day08_benchmarks"
harness = false

